--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -4,5 +4,6 @@
 <!--  POST /restaurants/44/reviews -->
 <%= simple_form_for [@restaurant, @review] do |f| %>
   <%= f.input :content %>
-  <%= f.submit %>
+  <%= f.input :rating %>
+  <%= f.button :submit %>
 <% end %>
